# monkc4Android

./: README.md  build.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/sapindus/oreisoft/com/sapindus/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/raw/: Avent.mtl  arakkoa_sage.mtl  maya-blender.mtl  monkey2.mtl
app/src/main/assets/shaders/: MCGLRenderer.fsh  MCGLRenderer.vsh
app/src/main/java/com/oreisoft/sapindus/: BEEngineView.java  BEEngineView.kt  BERenderer.java  GLActivity.kt  ItemDetailActivity.java  ItemDetailFragment.java  ItemListActivity.java  MainActivity.java  MainActivity.kt
app/src/main/java/com/oreisoft/sapindus/dummy/: DummyContent.java
app/src/main/java/sapindus/oreisoft/com/sapindus/: BEEngineView.java  MainActivity.java
app/src/main/native/App/: MCDemo.c  MCDemo.h  Testbed.c  native-lib.c
app/src/main/native/BEEngine/: MC3DBase.h  MC3DModel.c  MC3DNode.c  MC3DScene.c  MCCamera.c  MCGLContext.c  MCGLEngine.c  MCGLEngine.h  MCGLRenderer.c  MCLight.c  MCLight.h  MCMatrial.c  MCMatrial.h  MCMesh.c  MCMesh.h
app/src/main/native/Engine/: MCSkybox.c
app/src/main/native/Lemontea/: MCJNI.h  MCMath.h
app/src/main/native/MCDriver/: MC3DAndroidDriver.c  MC3DiOS.h  MC3DiOSDriver.h  MC3DiOSDriver.m
app/src/main/native/MonkC/: MCTrampoline.S  monkc.c  monkc.h
app/src/main/res/layout/: activity_item_detail.xml  activity_item_list.xml  activity_main.xml  item_detail.xml  item_list.xml
app/src/main/res/layout-w900dp/: item_list.xml
app/src/main/res/values/: strings.xml
app/src/test/java/sapindus/oreisoft/com/sapindus/: ExampleUnitTest.java
beengine/: CMakeLists.txt  build.gradle
beengine/src/androidTest/java/com/oreisoft/bedemo/beengine/: ExampleInstrumentedTest.java
beengine/src/main/: AndroidManifest.xml
beengine/src/main/java/com/oreisoft/bedemo/beengine/: BERenderer.kt
beengine/src/main/java/com/oreisoft/beengine/: BEAndroidExtension.kt  BEEngineView.kt  BEGLActivity.kt  BEGameController.kt  BEMotionManager.kt  BENativeRenderer.kt  BERenderer.kt  BEResource.kt  BEView.kt  PSKeyEvent.kt
beengine/src/main/native/App/: native_renderer.c  native_renderer.h
beengine/src/main/native/BEAssets/: BAMtlParser.c  BAMtlParser.h  BAObjParser.h  BE2DTextureData.c  BE2DTextureData.h  BEAssetsManager.c  BEAssetsManager.h  BECubeTextureData.c  BECubeTextureData.h
beengine/src/main/native/Backend/OpenGL/: MCGLContext.c  MCGLContext.h  MCGLDefaultShader.h  MCGLRenderer.c  MCGLRenderer.h  MCGLShader.c  MCGLShader.h  MCGLSkyboxShader.h
beengine/src/main/native/Backend/Vulkan/: VKRenderer.c  VKRenderer.h
beengine/src/main/native/Classes/BEAssets/: BALexer.h  BAMtlParser.c  BAMtlParser.h  BAObjParser.c  BAObjParser.h  BE2DTextureData.c  BE2DTextureData.h  BEAssetsManager.c  BECubeTextureData.c  BECubeTextureData.h  beassets_export.h
beengine/src/main/native/Classes/Backend/Metal/: BEMTRenderer.h  BEMTRenderer.m  BEMTShaderTypes.h  BEMTShaders.metal  BEMTView.h  BEMTView.m
beengine/src/main/native/Classes/Backend/OpenGL/: MCGLBase.h  MCGLContext.c  MCGLContext.h  MCGLDefaultShader.h  MCGLRenderer.c  MCGLRenderer.h  MCGLShader.c  MCGLShader.h  MCGLSkysphereShader.h  opengl_export.h
beengine/src/main/native/Classes/Engine/: MC2DTex.c  MC2DTex.h  MC3DAxis.c  MC3DAxis.h  MC3DBase.h  MC3DModel.c  MC3DModel.h  MC3DModelCache.c  MC3DModelCache.h  MC3DNode.c  MC3DNode.h  MC3DScene.c  MC3DScene.h  MC3DShapeBase.h  MCCamera.c  MCCamera.h  MCCube.h  MCDirector.c  MCDirector.h  MCLight.c  MCLight.h  MCMaterial.c  MCMaterial.h  MCMesh.c  MCMesh.h  MCOrbit.c  MCPanel.h  MCRenderer.p  MCShaderTypes.h  MCSkybox.c  MCSkybox.h  MCSkysphere.c  MCSkysphere.h  MCTexture.c  MCTexture.h  MCTextureCache.c  MCTextureCache.h  MCWorld.c  MCWorld.h  beengine_export.h
beengine/src/main/native/Classes/Interface/: BEEngineCAPI.c  BEEngineCAPI.h  MC3DAndroidDriver.c
beengine/src/main/native/Classes/Interface/Mac/: BENSView.h  BENSView.m
beengine/src/main/native/Classes/MonkC/: MCArray.c  MCArray.h  MCArrayList.c  MCClock.c  MCClock.h  MCContext.c  MCContext.h  MCGeometry.c  MCGeometry.h  MCGraph.c  MCGraph.h  MCHeap.c  MCHeap.h  MCIO.c  MCIO.h  MCLinkedList.c  MCLinkedList.h  MCMap.c  MCMap.h  MCMath.c  MCMath.h  MCProcess.c  MCProcess.h  MCSet.c  MCSet.h  MCSocket.c  MCSocket.h  MCSort.c  MCSort.h  MCString.c  MCString.h  MCThread.c  MCThread.h  MCTree.c  MCTree.h  MCUnitTest.c  MCUnitTest.h  monkc.c  monkc.h  monkc_export.h
beengine/src/main/native/Engine/: MC2DTex.c  MC2DTex.h  MC3DAxis.c  MC3DAxis.h  MC3DBase.h  MC3DModel.c  MC3DModel.h  MC3DModelCache.h  MC3DNode.c  MC3DNode.h  MC3DScene.c  MC3DScene.h  MCCamera.c  MCCamera.h  MCCube.c  MCDirector.c  MCDirector.h  MCLight.c  MCLight.h  MCMaterial.c  MCMesh.c  MCMesh.h  MCOrbit.h  MCPanel.c  MCRenderer.p  MCSkybox.c  MCSkybox.h  MCSkysphere.c  MCSkysphere.h  MCTexture.c  MCTexture.h  MCTextureCache.c  MCTextureCache.h  MCUIBase.h  MCWorld.h
beengine/src/main/native/Interface/: BEEngineCAPI.c  MC3DAndroidDriver.c
beengine/src/main/native/Lemontea/: MCJNI.h
beengine/src/main/native/MCDriver/: MC3DiOS.h
beengine/src/main/native/MonkC/: MCClock.c  MCClock.h  MCContext.c  MCContext.h  MCGeometry.c  MCIO.c  MCIO.h  MCJNI.h  MCMap.c  MCMap.h  MCMath.h  MCSocket.h  MCString.c  MCString.h  MCTrampoline.S  monkc.c  monkc.h  monkc_export.h
beengine/src/main/res/values/: strings.xml
beengine/src/test/java/com/oreisoft/bedemo/beengine/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
